syntax = "proto3";
package finance;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/bar-raisers/intention/models/finance";

message Transaction {
  uint32 transaction_id = 1;
  google.protobuf.Timestamp date = 2;
  string account_id = 3;
  string payee_id = 4;
  float amount = 5;
}
